--- a/app/assets/javascripts/facebook.js.coffee.erb
+++ b/app/assets/javascripts/facebook.js.coffee.erb
@@ -8,7 +8,7 @@ jQuery ->
 
 
 window.fbAsyncInit = ->
-  FB.init(appId: '<%= ENV["FACEBOOK_KEY"] %>', cookie: true)
+  FB.init(appId: '<%= ENV["FACEBOOK_ID"] %>', cookie: true)
 
   $('#sign_in').click (e) ->
     e.preventDefault()
