Fix model associations and routes

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,8 @@
-<p id="notice"><%= notice %></p>
+<strong>Hi <%= @spotify_user.display_name %></strong>
 
 <p>
-  <strong>Title:</strong>
-  <%= @link.title %>
-</p>
-
-<p>
-  <strong>Url:</strong>
-  <%= @link.url %>
+  <strong>Artists following:</strong>
+  
 </p>
 
 <%= @artist_searched %>
