--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,9 @@
 
 <p>
   <strong>Artists following:</strong>
-  <%= @user.artists %>
+  <% @user.artists.each do |artist| %>
+    <%= link_to artist.name, artist %>
+  <% end %>
 </p>
 
 <p>
