--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,46 @@
-<div id="user_nav">
-  <% if current_user %>
-    Signed in as <strong><%= current_user.name %></strong>!
-    <%= link_to "Sign out", signout_path, id: "sign_out" %>
-  <% else %>
-    <%= link_to 'Sign in with Spotify', '/auth/spotify' %>
-  <% end %>
-</div>
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
+      </ul>
+
+    <% if current_user %>
+      <ul class="nav navbar-nav navbar-right">
+      <li>
+      <a href="/search">
+      <span class="glyphicon glyphicon-search"></span>
+      Search
+      </a></li>
+        <li><%= link_to "Artists Following", "/ArtistsFollowing" %></li>
+        <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%="#{current_user.name} " %><img src="<%= current_user.image_url%>" height="25"><span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li> <%= link_to "Log out", "/signout" %></li>
+          </ul>
+        </li>
+      </ul>
+
+    <% else %>
+
+      <ul class="nav navbar-nav navbar-right">   
+    <li>        
+      <%= link_to "Login with Spotify", "/auth/spotify"%></li>
+        </li>
+      </ul>
+      <% end %>
+
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
