--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,52 +12,7 @@
   <%= analytics_init if Rails.env.production? %>
 </head>
 <body>
-
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
-
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
-      </ul>
-
-    <% if current_user %>
-      <ul class="nav navbar-nav navbar-right">
-      <li>
-      <a href="/search">
-      <span class="glyphicon glyphicon-search"></span>
-      Search
-      </a></li>
-        <li><%= link_to "Artists Following", "/ArtistsFollowing" %></li>
-        <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%="#{current_user.name} " %><img src="<%= current_user.image_url%>" height="25"><span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li> <%= link_to "Log out", "/signout" %></li>
-          </ul>
-        </li>
-      </ul>
-
-    <% else %>
-
-      <ul class="nav navbar-nav navbar-right">   
-    <li>        
-      <%= link_to "Login with Spotify", "/auth/spotify"%></li>
-        </li>
-      </ul>
-      <% end %>
-
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+<%= render 'layouts/header' %>
 <%= yield %>
 </body>
 </html>
