--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @artist.name %></h1>
 <p>
-  <img src="<%= @artist.image_url %>"<br>
-  <%= link_to "Profile Page", @artist.profile_url  %><br>
+  <img src="<%= @artist.image_url %>", width: "300", height = "300"><br>
+  <%= link_to "Profile Page", @artist.profile_url %><br>
   <%= form_for(ArtistUser.new) do |f| %>
       <%= f.hidden_field :user_id, :value => current_user.id %>
       <%= f.hidden_field :artist_id, :value => @artist.id %>
@@ -12,6 +12,6 @@
 <p>
   Top Tracks:<br>
   <% @spotify_info.top_tracks("US").each.with_index(1) do |track, i| %>
-    <%= image_tag(track.album.images.first["url"])%> <%= i %>. <%= track.name %> - <%= track.album.name %><br>
+    <%= image_tag(track.album.images.first["url"], size: "100x100")%> <%= i %>. <%= track.name %> - <%= track.album.name %><br>
   <% end %>
 </p>
