--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,6 +27,7 @@
         <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%="#{current_user.name} " %><img src="<%= current_user.image_url%>" height="25"><span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
+            <li> <%= link_to "User Profile", user_path(current_user.id) %> </li>
             <li> <%= link_to "Log out", "/signout" %></li>
           </ul>
         </li>
