--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,21 +17,26 @@
       </ul>
 
     <% if current_user %>
-      <ul class="nav navbar-nav navbar-right">
-      <li>
-      <a href="/search">
-      <span class="glyphicon glyphicon-search"></span>
-      Search
-      </a></li>
-        <li><%= link_to "Artists Following", "/ArtistsFollowing" %></li>
-        <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%="#{current_user.name} " %><img src="<%= current_user.image_url%>" height="25"><span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li> <%= link_to "User Profile", user_path(current_user.id) %> </li>
-            <li> <%= link_to "Log out", "/signout" %></li>
-          </ul>
-        </li>
-      </ul>
+     <ul class="nav navbar-nav navbar-right">
+     <li>
+     <%= form_tag "/search", :method => 'post' do %>
+       <p>
+         <%= text_field_tag "search[name]", params.has_key?("search") && params[:search].has_key?("name") ? params[:search][:name] : "", :placeholder => "Search artists..." %>
+         <%= button_tag(type: 'submit', class: "btn btn-primary") do %>
+           <i class="glyphicon glyphicon-search"></i>
+         <% end %>
+       </p>
+     <% end %>
+     </li>
+       <li><%= link_to "Artists Following", "/ArtistsFollowing" %></li>
+       <li class="dropdown">
+       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%="#{current_user.name} " %><img src="<%= current_user.image_url%>" height="25"><span class="caret"></span></a>
+         <ul class="dropdown-menu" role="menu">
+           <li> <%= link_to "User Profile", user_path(current_user.id) %> </li>
+           <li> <%= link_to "Log out", "/signout" %></li>
+         </ul>
+       </li>
+     </ul>
 
     <% else %>
 
