--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,14 @@
-<strong>Hi <%= @user.name %></strong>
+<strong>Welcome, <%= @user.name %>.</strong>
 
 <p>
-  <strong>Artists following:</strong><br>
+  <strong>Artists being followed:</strong><br>
   <% @user.artists.each do |artist| %>
     <%= link_to artist.name, artist %>
   <% end %>
 </p>
 
 <p>
-  <strong>Top tracks from all artists from Spotify:</strong><br>
+  <strong>Recent tracks from all followed artists from Spotify:</strong><br>
   <% @user.artists.each do |artist| %>
     <% RSpotify::Artist.search(artist.name).first.top_tracks("US").each.with_index(1) do |track, i| %>
       <%= image_tag(track.album.images.first["url"], size: "50x50")%> <%= i %>. <%= track.name %> - <%= track.album.name %><br>
@@ -17,7 +17,7 @@
 </p>
 
 <p>
-  <strong>Top tracks from all artists from SoundCloud:</strong><br>
+  <strong>Recent tracks from all followed artists from SoundCloud:</strong><br>
   <% @user.artists.each do |artist| %>
     <% @client.get('/tracks', :q => "#{artist.name}", :licence => 'cc-by-sa').each.with_index(1) do |track, i| %>
       <%= image_tag(track.artwork_url, size: "50x50") %> <%= i %>. <%= track.title %> Plays: <%= track.playback_count %><br>
