Move track display logic from view to model

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,24 +3,20 @@
 <p>
   <strong>Artists following:</strong><br>
   <% @user.artists.each do |artist| %>
-    <%= link_to artist.name, artist %>
+    <%= link_to artist.name, artist %><br>
   <% end %>
 </p>
 
 <p>
-  <strong>Top tracks from all artists from Spotify:</strong><br>
-  <% @user.artists.each do |artist| %>
-    <% RSpotify::Artist.search(artist.name).first.top_tracks("US").each.with_index(1) do |track, i| %>
-      <%= image_tag(track.album.images.first["url"], size: "50x50")%> <%= i %>. <%= track.name %> - <%= track.album.name %><br>
-    <% end %>
-  <% end %>
+<strong>Top tracks from all artists from Spotify:</strong><br>
+<% @user.spotify_tracks.each do |number, track| %>
+  <%= image_tag(track["image_url"], size: "50x50")%> <%= number %>. <%= track["artist_name"] %> - <%= track["track_name"] %> - <%= track["album_name"] %><br>
+<% end %>
 </p>
 
 <p>
   <strong>Top tracks from all artists from SoundCloud:</strong><br>
-  <% @user.artists.each do |artist| %>
-    <% @client.get('/tracks', :q => "#{artist.name}", :licence => 'cc-by-sa').each.with_index(1) do |track, i| %>
-      <%= image_tag(track.artwork_url, size: "50x50") %> <%= i %>. <%= track.title %> Plays: <%= track.playback_count %><br>
-    <% end %>
+  <% @user.soundcloud_tracks.each do |number, track| %>
+    <%= image_tag(track["image_url"], size: "50x50") %> <%= number %>, <%= track["track_name"] %><br>
   <% end %>
 </p>
