Add padding to body to fix overlap

--- a/app/assets/css/bootstrap.css
+++ b/app/assets/css/bootstrap.css
@@ -222,6 +222,7 @@ textarea {
 }
 
 body {
+  padding-top: 100px;
   margin: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
