--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,1 +1,138 @@
-<img src ="/assets/Banner.png">
+<center><img src ="/assets/Banner.png"></center>
+
+    <section class="text-block">
+      <div class="features text-center dark-bg">
+        <div class="container">
+          <div class="row-fluid">
+            <article class="span3">
+              <i class="icon-resize-full"></i>
+              <h3 class="with-border">Speed</h3>
+              <p>Know about all the latest music as early as possible. </p>
+            </article>
+            <article class="span3">
+              <i class="icon-magic"></i>
+              <h3 class="with-border">Organization</h3>
+              <p>Everyone you follow, and all of their music, all on one page. </p>
+            </article>
+            <article class="span3">
+              <i class="icon-thumbs-up"></i>
+              <h3 class="with-border">Platforms</h3>
+              <p>We currently track your artist on Spotify and SoundCloud. More platforms coming soon!</p>
+            </article>
+            <article class="span3">
+              <i class="icon-cogs"></i>
+              <h3 class="with-border">Discover</h3>
+              <p>Discover new music.</p>
+            </article>
+          </div>
+        </div>  
+      </div>  
+      <div class="light-bg">
+        <div class="container">
+          <h2 class="with-border">Latest Updates</h2>
+          <ul class="thumbnails">
+            <li class="span4">
+              <div class="thumbnail">
+                <div class="img-wrap">
+                    <div class="black-bg">
+                      <i class="icon-zoom-in"></i>
+                    </div>
+                  </a>
+                </div>  
+                <a href="#">
+                  <h3 class="with-border color">New Theme</h3>
+                  <p>New theme! Woohoo.</p>
+                </a>
+              </div>  
+            </li>
+            <li class="span4">
+              <div class="thumbnail">
+                <div class="img-wrap">
+                    <div class="black-bg">
+                      <i class="icon-zoom-in"></i>
+                    </div>  
+                  </a>
+                </div>
+                <a href="#">
+                  <h3 class="with-border color">Search Engine Optimizations</h3>
+                  <p>The old search took way too long to load results. So we fixed it up!</p>
+                </a>
+              </div>  
+            </li>
+            <li class="span4">
+              <div class="thumbnail">
+                <div class="img-wrap">
+                    <div class="black-bg">
+                    </div>  
+                  </a>
+                </div>
+                <a href="#">
+                  <h3 class="with-border color">Added Spotify Support</h3>
+                  <p>SpeEDM now supports Spotify! Log in with your Spotify account to start discovering new music</p>
+                </a>
+              </div>  
+            </li>
+          </ul> 
+        </div>
+      </div>  
+      <div class="dark-bg"> 
+        <div class="container">
+          <div class="row-fluid">
+            <div class="span6">
+              <h2 class="with-border">Why is SpeEDM great?</h2>
+              <div id="accordion" class="section">
+                <div class="accordion-group">
+                  <div class="accordion-heading">
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                      <i class="icon-resize-full"></i> Speed
+                    </a>
+                  </div>
+                  <div id="collapseOne" class="accordion-body collapse">
+                    <div class="accordion-inner">
+                      <p>Know about all the latest music as early as possible.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-group">
+                  <div class="accordion-heading">
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+                      <i class="icon-magic"></i> Organization
+                    </a>
+                  </div>
+                  <div id="collapseTwo" class="accordion-body collapse">
+                    <div class="accordion-inner">
+                      <p>Everyone you follow, and all of their music, all on one page. </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-group">
+                  <div class="accordion-heading">
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
+                      <i class="icon-thumbs-up"></i> Platforms
+                    </a>
+                  </div>
+                  <div id="collapseThree" class="accordion-body collapse">
+                    <div class="accordion-inner">
+                      <p>We currently track your artist on Spotify and SoundCloud. More platforms coming soon!</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-group">
+                  <div class="accordion-heading">
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
+                      <i class="icon-cogs"></i> Discover
+                    </a>
+                  </div>
+                  <div id="collapseFour" class="accordion-body collapse">
+                    <div class="accordion-inner">
+                      <p>Discover new music.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>    
+    </section>
+    <a class="goTop goTop-link"><i class="icon-angle-up"></i></a>
