--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -7,29 +7,29 @@
             <article class="span3">
               <i class="icon-resize-full"></i>
               <h3 class="with-border">Speed</h3>
-              <p>Know about all the latest music as early as possible. </p>
+              <p>Learn about all the recent music added as early as possible. </p>
             </article>
             <article class="span3">
               <i class="icon-magic"></i>
               <h3 class="with-border">Organization</h3>
-              <p>Everyone you follow, and all of their music, all on one page. </p>
+              <p>Every artist you follow and all of their music is all displayed on one simple page. </p>
             </article>
             <article class="span3">
               <i class="icon-thumbs-up"></i>
               <h3 class="with-border">Platforms</h3>
-              <p>We currently track your artist on Spotify and SoundCloud. More platforms coming soon!</p>
+              <p>We currently track your favorite artists on Spotify and SoundCloud. More platforms such as Beatport will be coming soon!</p>
             </article>
             <article class="span3">
               <i class="icon-cogs"></i>
               <h3 class="with-border">Discover</h3>
-              <p>Discover new music.</p>
+              <p>A smart reccomendation engine will be implemented soon.</p>
             </article>
           </div>
         </div>  
       </div>  
       <div class="light-bg">
         <div class="container">
-          <h2 class="with-border">Latest Updates</h2>
+          <h2 class="with-border">Updates and Contact</h2>
           <ul class="thumbnails">
             <li class="span4">
               <div class="thumbnail">
@@ -40,8 +40,8 @@
                   </a>
                 </div>  
                 <a href="#">
-                  <h3 class="with-border color">New Theme</h3>
-                  <p>New theme! Woohoo.</p>
+                  <h3 class="with-border color">Contact</h3>
+                  <p>SpeEDM was developed and created by Sanjay Chakravorty and Brian Choy.</p>
                 </a>
               </div>  
             </li>
@@ -54,8 +54,8 @@
                   </a>
                 </div>
                 <a href="#">
-                  <h3 class="with-border color">Search Engine Optimizations</h3>
-                  <p>The old search took way too long to load results. So we fixed it up!</p>
+                  <h3 class="with-border color">Search Engine Optimization</h3>
+                  <p>We have refined the search engine to be extremely fast now!</p>
                 </a>
               </div>  
             </li>
@@ -68,7 +68,7 @@
                 </div>
                 <a href="#">
                   <h3 class="with-border color">Added Spotify Support</h3>
-                  <p>SpeEDM now supports Spotify! Log in with your Spotify account to start discovering new music</p>
+                  <p>SpeEDM now supports Spotify authentication - log in with your Spotify account to start discovering new music.</p>
                 </a>
               </div>  
             </li>
@@ -79,17 +79,17 @@
         <div class="container">
           <div class="row-fluid">
             <div class="span6">
-              <h2 class="with-border">Why is SpeEDM great?</h2>
+              <h2 class="with-border">Why use SpeEDM?</h2>
               <div id="accordion" class="section">
                 <div class="accordion-group">
                   <div class="accordion-heading">
                     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                      <i class="icon-resize-full"></i> Speed
+                      <i class="icon-resize-full"></i> Efficiency
                     </a>
                   </div>
                   <div id="collapseOne" class="accordion-body collapse">
                     <div class="accordion-inner">
-                      <p>Know about all the latest music as early as possible.</p>
+                      <p>Learn bout all the latest music as early as possible and as fast as possible.</p>
                     </div>
                   </div>
                 </div>
@@ -101,7 +101,7 @@
                   </div>
                   <div id="collapseTwo" class="accordion-body collapse">
                     <div class="accordion-inner">
-                      <p>Everyone you follow, and all of their music, all on one page. </p>
+                      <p>Enjoy the simplicity of having all your favorite artists and their music displayed on one page. </p>
                     </div>
                   </div>
                 </div>
@@ -113,7 +113,7 @@
                   </div>
                   <div id="collapseThree" class="accordion-body collapse">
                     <div class="accordion-inner">
-                      <p>We currently track your artist on Spotify and SoundCloud. More platforms coming soon!</p>
+                      <p>Spotify and Soundcloud have been succesfully integrated. Beatport and more to come soon!</p>
                     </div>
                   </div>
                 </div>
@@ -125,7 +125,7 @@
                   </div>
                   <div id="collapseFour" class="accordion-body collapse">
                     <div class="accordion-inner">
-                      <p>Discover new music.</p>
+                      <p>Discover new music and broaden your horizons.</p>
                     </div>
                   </div>
                 </div>
