update home and user views

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -29,7 +29,7 @@
       </div>  
       <div class="light-bg">
         <div class="container">
-          <h2 class="with-border">Updates and Contact</h2>
+          <h2 class="with-border">Information and Contact</h2>
           <ul class="thumbnails">
             <li class="span4">
               <div class="thumbnail">
@@ -41,7 +41,7 @@
                 </div>  
                 <a href="#">
                   <h3 class="with-border color">Contact</h3>
-                  <p>SpeEDM was developed and created by Sanjay Chakravorty and Brian Choy.</p>
+                  <p>SpeEDM was developed and created by Sanjay Chakravorty(sjchakrav@gmail.com) and Brian Choy.</p>
                 </a>
               </div>  
             </li>
@@ -54,8 +54,8 @@
                   </a>
                 </div>
                 <a href="#">
-                  <h3 class="with-border color">Search Engine Optimization</h3>
-                  <p>We have refined the search engine to be extremely fast now!</p>
+                  <h3 class="with-border color">How to use the App</h3>
+                  <p>After logging in with your spotify credentials you'll be redirected to your user dashboard. To begin following artists you simply type in the name of the artist in the search bar at the top and then follow the artist. All artists you're following will be displayed in the user dashboard as well as all their relevant tracks!</p>
                 </a>
               </div>  
             </li>
@@ -63,12 +63,13 @@
               <div class="thumbnail">
                 <div class="img-wrap">
                     <div class="black-bg">
+                      <i class="icon-zoom-in"></i>
                     </div>  
                   </a>
                 </div>
                 <a href="#">
-                  <h3 class="with-border color">Added Spotify Support</h3>
-                  <p>SpeEDM now supports Spotify authentication - log in with your Spotify account to start discovering new music.</p>
+                  <h3 class="with-border color">Search Engine Optimization and API Information</h3>
+                  <p>We have refined the search engine to make fewer calls to the API resulting in a faster processing time. Spotify and Soundcloud's API have been successfully integrated.</p>
                 </a>
               </div>  
             </li>
