add profile pic to user dashboard

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
-<strong>Welcome, <%= @user.name %>.</strong>
+<strong>Welcome, <%= @user.name %>.</strong><br>
+<br>
+<%= image_tag(@user.image_url, size: "200x200") %>
 <p>
 <br>
 <font size = "3">
