--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -22,7 +22,7 @@
             <article class="span3">
               <i class="icon-cogs"></i>
               <h3 class="with-border">Discover</h3>
-              <p>A smart reccomendation engine will be implemented soon.</p>
+              <p>A smart recommendation engine will be implemented soon.</p>
             </article>
           </div>
         </div>  
